# aikosky-parkour

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: game.h  physics.h  player.h  renderer.h
src/: game.cpp  physics.cpp  player.cpp  renderer.cpp
